# jupyter_anywidget_window_ai

./: .gitignore  BUILD.md  LICENSE  README.md  example.ipynb  package.json  pyproject.toml
js/: utils.js  widget.css  widget.js  windowai.css  windowai.html  windowai.js
src/jupyter_anywidget_window_ai/: __init__.py  panel.py
